Avoid blurry text in topo loading message

--- a/client/app/styles/main.less
+++ b/client/app/styles/main.less
@@ -301,7 +301,8 @@ h2 {
     position: absolute;
     left: 50%;
     top: 50%;
-    transform: translate(-50%, -50%);
+    margin-left: -16.5%;
+    margin-top: -275px;
     color: @text-secondary-color;
     width: 33%;
     height: 550px;
